Add images and update landing page content and styles

--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Charity Water Landing Page</title>
+   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
+   <!-- Hero Section: This is the main banner at the top of the page -->
+   <section class="hero">
+       <!-- Main headline -->
+       <h1 class="big-headline">Be The Generation that Ends Water Crisis</h1>
+   </section>
 
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
 
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
-        </div>
-    </section>
 
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
-    </section>
+
+
+   <!-- Real-World Impact Story Section -->
+   <section class="impact-story">
+       <!-- Section headline -->
+       <h2>Meet Emma: Our Representative Student</h2>
+       <!-- Container for image and text -->
+       <div class="impact-content">
+           <!-- Impact image -->
+           <!-- Impact image: replaced with your own image from the img folder -->
+           <!-- Impact image: now using emma.jpg from the img folder -->
+           <img src="img/emma.jpg" alt="Clean water project" class="impact-image">
+           <!-- Impact story text -->
+           <p>
+               Your action today brings clean water and justice to communities that don't have it.
+
+               Join a global movement solving the water crisis at its root. Charity: Water brings clean & sustainable water solutions to communities worldwide with 100% of your donation funding real projects you can see and track. For changemakers like you, it’s more than charity—it’s power in action.
+           </p>
+       </div>
+   </section>
+
+
+   <!-- Call-to-Action Section: This encourages visitors to take action -->
+   <section class="call-to-action">
+       <h2>Turn Action into Impact</h2>
+       <p>Charity: Water’s visual brand prioritizes real people, real emotions, and real change.</p>
+       <a href="#" class="donate-button">Make Change</a>
+   </section>
 </body>
-</html>
+</html>//
